<package format="2">
  <name>statistical_outlier_removal_filter</name>
  <version>0.0.0</version>
  <description>The statistical_outlier_removal_filter package</description>
  <maintainer email="user@todo.todo">Your Name</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_srvs</exec_depend>
</package>